# rod-animation

./: .gitignore  Cargo.toml  README.md  tile.json
in/: alles.txt  anim.txt  anim2.txt  test10.txt  test11.txt  test12.txt  test13.txt  test14.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt
res/: in  out  style.json
res/tracks/: Clarissa.txt  Flavio.txt  Ivo.txt  Louis.txt  Luca.txt  Marc.txt  Takashi.txt
src/: bounded.rs  draw.rs  geometry.rs  main.rs  map.rs  track.rs  vec.rs
src/draw/: parse.rs
src/map/: cache.rs
test_files/: animation.txt  dumb.txt  image.txt  image_failing.txt
