[package]
name = "rod"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
env_logger = "0.11.8"
geo-types = "0.7.17"
hex = "0.4.3"
hsv = "0.1.1"
log = "0.4.28"
mvt-reader = { version = "2.1.0", features = ["serde"] }
rayon = "1.11.0"
reqwest = { version = "0.12.24", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
skia-safe = "0.89.1"

[features]
luca_build = []
